# neosocket

./: .env.example  .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  utils.rs
src/managers/: channel.rs  channel_manager.rs  mod.rs  recipient_manager.rs
src/packets/: connected_packet.rs  mod.rs  packet_container.rs  propagate_packet.rs
src/services/: health.rs  mod.rs  room.rs  ws.rs
src/tasks/: delete_unused_channels_task.rs  mod.rs
src/ws/: channel.rs  channel_manager.rs  mod.rs
